k8s/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      # Use a volume
      volumes:
        # Request the volume with the given claimName
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage # has to be indentical to one of the volume names defined above
              mountPath: /var/lib/postgresql/data # store this directory in the volume
              subPath: postgres # sub dir in the volume
