k8s/server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  # Selector for finding set of Pod objects
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      # Assign a label to the Deployment object so that it can be found by a ClusterIP service
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: twci/multi-server
          ports:
            - containerPort: 5000
