k8s/redis.clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service # this will be used as the host name
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
